# pytest-codspeed

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  cliff.toml  issue.md  pyproject.toml  report.md  repro.py  repro1_single_no_delete.py  repro2_single_explicit_deinit.py  repro3_multi_eager_cleanup.py  repro4_multi_skip_deinit.py  setup.py
.github/workflows/: ci.yml  codspeed.yml  release.yml
asv-codspeed/: pyproject.toml
asv-codspeed/src/asv_codspeed/: __init__.py  __main__.py  discovery.py  runner.py
asv-codspeed/tests/: conftest.py  test_cli.py  test_discovery.py  test_runner.py
asv-codspeed/tests/sample_benchmarks/: bench_fibo.py  bench_foo_bar_baz.py  bench_simple.py
codspeed/: pyproject.toml  setup.py
codspeed/src/codspeed/: __init__.py  config.py  utils.py
codspeed/src/codspeed/instruments/: __init__.py  valgrind.py  walltime.py
codspeed/src/codspeed/instruments/hooks/: __init__.py  build.py  dist_instrument_hooks.pyi
examples/: optimize_loop.py
pytest-codspeed/: pyproject.toml
pytest-codspeed/src/pytest_codspeed/: plugin.py  utils.py
pytest-codspeed/tests/: conftest.py  test_format_time.py  test_pytest_plugin.py  test_pytest_plugin_cpu_instrumentation.py  test_pytest_plugin_walltime.py  test_utils.py
pytest-codspeed/tests/benchmarks/: test_bench_doc.py
pytest-codspeed/tests/benchmarks/TheAlgorithms_bench/: test_bench_audio_filters.py
scripts/: generate_semver.py  post-release.sh  pre-release.sh  release.sh
src/avalanche_pytest/: _callgrind_wrapper.py  plugin.py
src/pytest_codspeed/: __init__.py  benchmark.py  comparison.py  config.py  eval_harness.py  plugin.py  utils.py
src/pytest_codspeed/_wrapper/: .gitignore  __init__.py  wrapper.c  wrapper.h  wrapper.pyi
src/pytest_codspeed/instruments/: __init__.py  analysis.py  cpu_instrumentation.py  instrumentation.py  valgrind.py  walltime.py
src/pytest_codspeed/instruments/cpu_instrumentation/: __init__.py
src/pytest_codspeed/instruments/cpu_instrumentation/_wrapper/: __init__.py
src/pytest_codspeed/instruments/hooks/: __init__.py  build.py  dist_instrument_hooks.pyi  instrument_hooks_module.c
src/pytest_codspeed/instruments/valgrind/: __init__.py
src/pytest_codspeed/instruments/valgrind/_wrapper/: __init__.py  build.py  wrapper.c  wrapper.h
tests/: conftest.py  test_benchmark.py  test_benchmark_metadata.py  test_comparison.py  test_comparison_integration.py  test_eval_harness.py  test_eval_harness_integration.py  test_format_time.py  test_generate_semver.py  test_pytest_plugin.py  test_pytest_plugin_cpu_instrumentation.py  test_pytest_plugin_results_json.py  test_pytest_plugin_walltime.py  test_return_value.py  test_utils.py
tests/benchmarks/: test_bench_fibo.py  test_bench_misc.py  test_bench_syscalls.py  test_bench_unittest.py  test_bench_various_noop.py  test_print.py
tests/benchmarks/TheAlgorithms_bench/: test_bench_backtracking.py  test_bit_manipulation.py
tests/benchmarks/TheAlgorithms_bench/audio_filters/: test_bench_butterworth_filter.py  test_bench_iir_filter.py
tests/benchmarks/TheAlgorithms_bench/backtracking/: test_bench_all_combinations.py  test_bench_all_permutations.py  test_bench_all_subsequences.py  test_bench_coloring.py  test_bench_combination_sum.py  test_bench_crossword_puzzle_solver.py  test_bench_generate_parentheses.py  test_bench_hamiltonian_cycle.py  test_bench_knight_tour.py  test_bench_match_word_pattern.py  test_bench_minimax.py  test_bench_n_queens.py  test_bench_n_queens_math.py  test_bench_power_sum.py  test_bench_rat_in_maze.py  test_bench_sudoku.py  test_bench_sum_of_subsets.py  test_bench_word_search.py
tests/benchmarks/test_bench_imports/: module_a.py  module_b.py  test_bench_imports.py
tests/examples/: test_addition_fixture.py
